# fastapi-query

./: .coveragerc  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: basic_example.py
examples/async_sqlalchemy_example/: schemas.py  server.py  utils.py
examples/sqlalchemy_example/: models.py  schemas.py  server.py  utils.py
examples/tortoise_example/: models.py  schemas.py  server.py
fastapi_query/: _compat.py
fastapi_query/ext/sqlalchemy/: __init__.py  filtering.py  ordering.py  pagination.py
fastapi_query/ext/tortoise/: pagination.py
fastapi_query/filtering/: __init__.py  base_params.py  deps.py  enums.py  utils.py
fastapi_query/pagination/: __init__.py  deps.py  schemas.py  utils.py
tests/ext/sqlalchemy/: conftest.py  test_filtering.py  test_ordering.py  test_pagination.py
tests/ext/sqlalchemy/examples/: app.py  models.py  schemas.py  seed.py
tests/ext/tortoise/: conftest.py  test_filtering.py  test_integration.py  test_ordering.py  test_pagination.py
tests/ext/tortoise/examples/: app.py  models.py  schemas.py  seed.py
tests/filtering/: conftest.py  test_base_params.py  test_deps.py  test_utils.py
tests/filtering/examples/: app.py  fields_info.py  schemas.py
tests/pagination/: conftest.py  test_deps.py  test_utils.py
tests/pagination/examples/: app.py
