[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fastapi-query"
version = "0.1-alpha"
description = "FastAPI Library for Filtering, Ordering, and Pagination"
authors = ["Lazar Stamenkovic <lazarstamenkovic96@hotmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/lazarst96/fastapi-query"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 1",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
]
packages = [{ include = "fastapi_query" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = ">=0.78,<1.0"
pydantic = "^2"
sqlalchemy = { version = ">=1.4.36,<3.0.0", optional = true }


[tool.poetry.extras]
sqlalchemy = ["sqlalchemy"]
all = ["sqlalchemy"]


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"
psycopg2 = "^2.9.7"
pytest = "^7.4.2"
coverage = "^7.3.2"
pytest-env = "^1.0.1"
httpx = "^0.25.0"
aiosqlite = "^0.19.0"
greenlet = "^3.0.0"
pytest-asyncio = "^0.21.1"
asyncpg = "^0.28.0"


[tool.poetry.group.lint.dependencies]
ruff = "^0.0.292"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "Q", # flake8-quotes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "B008", # do not perform function calls in argument defaults
]
line-length = 88

[tool.ruff.flake8-quotes]
avoid-escape = false
docstring-quotes = "double"
inline-quotes = "double"
